# goose-game

./: .gitignore  README.md  main.c
player/: player.c
src/: CMakeLists.txt  main.c
src/board/: board.c  board.h  terrain.c  terrain.h
src/game/: game.c  game.h
src/player/: player.c  player.h
src/questions/: boolAnswer.c  directAnswer.c  multipleChoiceAnswer.c  questions.c  questions.h  writtenQuestions.c
src/utils/: functions.c  functions.h  menus.c  menus.h  ui.c  ui.h
src/utils/functions/: functions.c  functions.h
src/utils/menus/: menus.c  menus.h
src/utils/pages/: pages.c  pages.h
src/utils/tables/: tables.c  tables.h
src/utils/ui/: ui.h
tiles/: tiles.c  tiles.h
utils/: functions.h  ui.c
